--- a/2017-2018/October/10-10-17 Agenda.md
+++ b/2017-2018/October/10-10-17 Agenda.md
@@ -1,7 +1,7 @@
 # Kansas State University
 # Student Chapter of the Association for Computing Machinery
 ### Officer Meeting Agenda
-### October 3, 2017
+### October 10, 2017
 
 
 #### Call to Order
@@ -15,10 +15,15 @@
 #### Order of Business
 
 ##### Fridge Duty
-Officer Taylor
+Officer Boley
 
-#### ACM & eSports LAN Party
-We'll need to order pizza.
+#### LAN Party Post Mortem
+Thoughts on how the LAN Party went with eSports.
+
+#### ACM Industry Series: Cerner
+* Room has been reserved by Officer Canfield
+* Pizza will be purchased and brought by Cerner
+* Digital Signage & Social Media Posts
 
 #### Event Competition
 Split into teams and prepare to present ideas next week.
