--- a/2017-2018/October/10-10-17 Agenda.md
+++ b/2017-2018/October/10-10-17 Agenda.md
@@ -17,7 +17,7 @@
 ##### Fridge Duty
 Officer Boley
 
-#### LAN Party Post Mortem
+##### LAN Party Post Mortem
 Thoughts on how the LAN Party went with eSports.
 
 #### ACM Industry Series: Cerner
@@ -27,3 +27,6 @@ Thoughts on how the LAN Party went with eSports.
 
 #### Event Competition
 Split into teams and prepare to present ideas next week.
+
+#### Budget Meeting
+Meet and discuss the upcoming budget requests.
