--- a/2017-2018/October/10-10-17 Agenda.md
+++ b/2017-2018/October/10-10-17 Agenda.md
@@ -1,32 +1,34 @@
-# Kansas State University
-# Student Chapter of the Association for Computing Machinery
-### Officer Meeting Agenda
-### October 10, 2017
+# KANSAS STATE UNIVERSITY
+# ASSOCIATION FOR COMPUTING MACHINERY
+## OFFICER MEETING AGENDA
+## OCTOBER 10, 2017
 
+#### CALL TO ORDER
+President Todd called the meeting to order at 6:00 p.m.
+#### ATTENDANCE
+#### Excused Absences:
 
-#### Call to Order
+#### Unexcused Absences:
+Officer Taylor, Officer Doll, Officer Dokos, Junior Officer Mahli
+#### ANNOUNCEMENTS
+#### OPEN PERIOD
 
-#### Attendance
-
-#### Announcements
-
-#### Open Period
-
-#### Order of Business
-
-##### Fridge Duty
-Officer Boley
-
-##### LAN Party Post Mortem
-Thoughts on how the LAN Party went with eSports.
-
-#### ACM Industry Series: Cerner
-* Room has been reserved by Officer Canfield
-* Pizza will be purchased and brought by Cerner
-* Digital Signage & Social Media Posts
-
-#### Event Competition
-Split into teams and prepare to present ideas next week.
-
-#### Budget Meeting
-Meet and discuss the upcoming budget requests.
+#### ADJOURNMENT
+Officer Carter moved to adjourn until Tuesday, October 10 at 6:00pm in DUE 1116. Motion passes. Adjourned at 6:p.m.
+#### ACTION ITEMS
+* President Todd
+* Vice President Eisenbarger
+* Secretary Canfield
+* Treasurer Carter
+* Outreach Chair Taylor
+* Event Chair Dokos
+* Industry Liaison Henderson
+* Open House Co-Chair Boley
+	* Fridge duty
+* Open House Co-Chair Doll
+* Senior Chair Beashore
+* Junior Officer Siebert
+* Junior Officer DeWeese
+* Junior Officer Murrell
+* Junior Officer Toy
+* Junior Officer Mahli
