--- a/2017-2018/October/10-03-17 Agenda.md
+++ b/2017-2018/October/10-03-17 Agenda.md
@@ -15,10 +15,11 @@
 #### Order of Business
 
 ##### Fridge Duty
-Officer Taylor
+* Officer Taylor
 
-#### ACM & eSports LAN Party
-We'll need to order pizza.
+##### ACM & eSports LAN Party
+October 6, 2017 @ 7pm in DUE 1118
+* Officer Dokos will need to order pizza.
 
-#### Event Competition
-Split into teams and prepare to present ideas next week.
+##### Event Competition
+* Split into teams and prepare to present ideas next week.
