--- a/2017-2018/October/10-10-17 Agenda.md
+++ b/2017-2018/October/10-10-17 Agenda.md
@@ -15,18 +15,19 @@
 #### Order of Business
 
 ##### Fridge Duty
-Officer Boley
+* Officer Boley
 
 ##### LAN Party Post Mortem
-Thoughts on how the LAN Party went with eSports.
+* Thoughts on how the LAN Party went with eSports.
 
-#### ACM Industry Series: Cerner
-* Room has been reserved by Officer Canfield
-* Pizza will be purchased and brought by Cerner
-* Digital Signage & Social Media Posts
+##### ACM Industry Series: Cerner
+October 17, 2017 @ 6pm in DUE 1114
+* Room has been reserved by Officer Canfield.
+* Pizza will be purchased and brought by Cerner.
+* Officer Taylor will need to post on social media and digital signage.
 
-#### Event Competition
-Split into teams and prepare to present ideas next week.
+##### Event Competition
+* Split into teams and prepare to present ideas next week.
 
-#### Budget Meeting
-Meet and discuss the upcoming budget requests.
+##### Budget Meeting
+* Meet and discuss the upcoming budget requests.
