Add previous agendas

--- a/2017-2018/09-September/09-26-17 Agenda.md
+++ b/2017-2018/09-September/09-26-17 Agenda.md
@@ -26,7 +26,7 @@ September 26, 2017 @ 6pm in DUE 1114
 
 ##### ACM Football Tailgate
 September 30, 2017 @ 11am in Jardine Parking Lot
-* Kickoff at 2:30pm
+* Kickoff at 2:30pm.
 * Officer Boley and Vice President Eisenbarger will be preparing food.
 * Officer Taylor will need to post on social media and digital signage.
 
