--- a/2017-2018/11-November/11-14-17 Agenda.md
+++ b/2017-2018/11-November/11-14-17 Agenda.md
@@ -30,7 +30,7 @@ December 1, 2017 @ 7pm in DUE 1118
 * Officer Canfield will need to reserve the room and tables.
 * Officer Taylor will need to post on social media and digital signage.
 * Officer Dokos will need to contact eSports about co-hosting.
-* Officer Dokos will need to discuss with Officer Henderson if Softek is providing food.
+* Officer Dokos will need to order pizza and get the total to Officer Henderson.
 
 #### Holiday Pancake Extravaganza
 December 5, 2017 @ 5:30pm in DUE 1114
