--- a/2017-2018/11-November/11-14-17 Agenda.md
+++ b/2017-2018/11-November/11-14-17 Agenda.md
@@ -33,11 +33,12 @@ December 1, 2017 @ 7pm in DUE 1118
 * Officer Dokos will need to order pizza and get the total to Officer Henderson.
 
 #### Holiday Pancake Extravaganza
-December 5, 2017 @ 5:30pm in DUE 1114
+December 5, 2017 @ 5:30pm in DUE 1116
 * We will be doing an election for the treasurer position.
 * Gift exchange begins at 6pm. $10 limit
-* Officer Canfield will need to reserve the room and tables.
-* Officer Taylor will need to post on social media and digital signage.
+* Officer Canfield will need to reserve the room.
+* Officer Canfield is creating digital signage.
+* Officer Taylor will need to post on social media.
 
 #### Spring Back to School Bash
 January 23, 2018
