--- a/2017-2018/11-November/11-28-17 Agenda.md
+++ b/2017-2018/11-November/11-28-17 Agenda.md
@@ -39,7 +39,8 @@ Computer Science Education Week: December 4-10, 2017
 
 #### Open House
 * Talk with department about funding.
-* SGA funding request due by December 1.
+* SGA funding request due on December 1.
+* 3 Reports due on December 4.
 * Write email to send to companies to asking for support for Open House
 * Write email to send to companies asking for judges
 * Write email to send to professors to ask them to offer extra credit for volunteering at Open House
