--- a/2017-2018/01-January/01-16-18 Agenda.md
+++ b/2017-2018/01-January/01-16-18 Agenda.md
@@ -16,6 +16,9 @@
 #### Fridge Duty
 Alex
 
+#### Advising Schedule
+* Break the website
+
 #### Wildcat Winter Expo
 January 18, 2018 @ 6pm in the Union Ballroom
 * Volunteers:
