Setting April Minutes

--- a/2017-2018/04-April/2-17-2018 Minutes.md
+++ b/2017-2018/04-April/2-17-2018 Minutes.md
@@ -5,6 +5,8 @@
 
 
 #### Call to Order
+ * 
+
 
 #### Attendance
 ##### Excused Absences:
@@ -13,14 +15,21 @@
  * Junior Officer
 
 #### Announcements
+**President Todd**
+
+### UPCOMING EVENTS
+* Every Wednesday: Open House Meetings (Required)
+* 5/1 - End of the Year BBQ
 
 #### Open Period
 
 #### Business Item
+
 ##### Business Item 1
 * Talking Points
 
 #### Adjournment
+
 
 #### Action Items
 * President Todd
