--- a/2017-2018/04-April/4-17-2018 Minutes.md
+++ b/2017-2018/04-April/4-17-2018 Minutes.md
@@ -5,31 +5,41 @@
 
 
 #### Call to Order
- * 
+ * President Todd called the meeting to order at 6:00 p.m.
 
 
 #### Attendance
 ##### Excused Absences:
  * Officer
-##### Unexcused Absences:
+    * 
  * Junior Officer
+    * 
+##### Unexcused Absences:
+ * Officer
+    * 
+ * Junior Officer
+    * 
 
 #### Announcements
 **President Todd**
+* End of the Year BBQ
 
 ### UPCOMING EVENTS
-* Every Wednesday: Open House Meetings (Required)
 * 5/1 - End of the Year BBQ
 
 #### Open Period
+* New members, Introduction of each officer
 
-#### Business Item
+#### Business Item 1
+* End of the Year BBQ, Tending to Food Approval
 
-##### Business Item 1
-* Talking Points
+##### Business Item 2
+* Current acting officers give a small presentations as to what they do.
+    * Talked about what we (as ACM) do as a club.
+    * The benefits of ACM club and what ACM is.
 
 #### Adjournment
-
+President Todd moved to adjourn until Tuesday, April 24 at 6:00pm in DUE 1116. Motion passes. Adjourned at 6:20p.m.
 
 #### Action Items
 * President Todd
@@ -40,6 +50,7 @@
 * Event Chair Dokos
 * Industry Liaison Henderson
 * Open House Co-Chair Boley
+    * Buy food for End of Year BBQ
 * Open House Co-Chair Doll
 * Senior Chair Beashore
 * Junior Officer Siebert
