--- a/2017-2018/04-April/4-17-2018 Minutes.md
+++ b/2017-2018/04-April/4-17-2018 Minutes.md
@@ -10,15 +10,8 @@
 
 #### Attendance
 ##### Excused Absences:
- * Officer
-    * 
- * Junior Officer
-    * 
 ##### Unexcused Absences:
- * Officer
-    * 
- * Junior Officer
-    * 
+
 
 #### Announcements
 **President Todd**
@@ -29,14 +22,11 @@
 
 #### Open Period
 * New members, Introduction of each officer
-
-#### Business Item 1
 * End of the Year BBQ, Tending to Food Approval
-
-##### Business Item 2
 * Current acting officers give a small presentations as to what they do.
     * Talked about what we (as ACM) do as a club.
     * The benefits of ACM club and what ACM is.
+* Current Officers are to type up their journals.
 
 #### Adjournment
 President Todd moved to adjourn until Tuesday, April 24 at 6:00pm in DUE 1116. Motion passes. Adjourned at 6:20p.m.
@@ -45,7 +35,7 @@ President Todd moved to adjourn until Tuesday, April 24 at 6:00pm in DUE 1116. M
 * President Todd
 * Vice President Eisenbarger
 * Secretary Canfield
-* Treasurer Carter
+* Treasurer Siebert
 * Outreach Chair Taylor
 * Event Chair Dokos
 * Industry Liaison Henderson
@@ -53,8 +43,6 @@ President Todd moved to adjourn until Tuesday, April 24 at 6:00pm in DUE 1116. M
     * Buy food for End of Year BBQ
 * Open House Co-Chair Doll
 * Senior Chair Beashore
-* Junior Officer Siebert
 * Junior Officer DeWeese
 * Junior Officer Toy
-* Junior Officer Malhi
 * Junior Officer Murrell
