--- a/2018-2019/08-August/08-21-18 Agenda.md
+++ b/2018-2019/08-August/08-21-18 Agenda.md
@@ -65,7 +65,7 @@
 
 
 #### Adjournment
-* President Canfield moved to adjourn until ____________ at 6:00pm in DUE 1116.
+* President Canfield moved to adjourn until 09-4-18 at 5:15pm in DUE 1116.
 * Motion passes. 
 * Adjourned at 6:50p.m.
 
