--- a/2018-2019/09-September/09-11-2018 Agenda.md
+++ b/2018-2019/09-September/09-11-2018 Agenda.md
@@ -28,17 +28,16 @@
 * October 6 @ 8am, Engineering Atrium - Programming Contest
 
 #### Open Period
+* Programming Contest brought up
+    * program we use will be also used in a texas programming contest thing.
+    * deciding on potential prizes
+    * tailgate
 * Fridge duty addressed
-* Help Session 7pm-8pm starting today
-* Back to school bash reflection
-* ACM interest form
-* ACM & MIS social
-    * CBA MIS Studios: 7-9pm
-    * September 18th
-    * Business Professional
-* ACM Lan Party
-* Fall Programming
-* Polo design
+* ACM & MIS Social
+    * Gameplan is to have the officer meeting, then head over to the business building.
+* Lan Party
+    * Food
+
 
 
 #### Adjournment
@@ -53,8 +52,8 @@
 * Treasurer DeWeese
 * Outreach Chair Bolinger
 * Event Chair Murrel
-    * Fridge Duty
 * Industry Liaison Loenen
+    * Fridge Duty
 * Open House Co-Chair Carter
 * Open House Co-Chair Loenen
 * Senior Chair Eisenbarger & Todd
