--- a/2018-2019/09-September/09-25-2018 Agenda.md
+++ b/2018-2019/09-September/09-25-2018 Agenda.md
@@ -18,29 +18,31 @@
 * 
 
 ### UPCOMING EVENTS
-* September 11 @ 6pm, DUE 1116 - ACM Industry Series: Garmin
-* September 14 @ 6:30pm, DUE 1118 - ACM LAN Party
-* September 18 @ 6pm, DUE 1116 - ACM Industry Series: Cerner
-* September 19 @ 5:30pm, Engineering Courtyard - Paycom Picnic
+* September 25 @ 5:30pm, Engineering Courtyard - Paycom Picnic
 * September ?? @ ??, College of Business Administration - MIS & ACM Career Fair
 * September 25 @ 6pm, DUE 1116 - ACM & Hack K-State: Hacking with Amazon Alexas
 * October 6 @ 8am, Engineering Atrium - Programming Contest
 
 #### Open Period
-* Programming Contest brought up
-    * program we use will be also used in a texas programming contest thing.
-    * deciding on potential prizes
-    * tailgate
-* Fridge duty addressed
-* ACM & MIS Social
-    * Gameplan is to have the officer meeting, then head over to the business building.
-* Lan Party
-    * Food
+* Amazon alexa things
+* Paycom picnic
+    * setup - andrew, amanda, MP, cody
+* Programming Contest
+    * talked about prizes and regulations
+* Hack K-State Track
+    * explanation as to what we do with a "track"
+* Issue of lacking events
+    * Hour of Code
+    * End of Year
+    * Holiday Party
+    * Halloween
+
+
 
 
 
 #### Adjournment
-* President Canfield moved to adjourn until 5:15pm at 6:00pm in DUE 1116.
+* President Canfield moved to adjourn until next Teusday 5:15pm at 6:00pm in DUE 1116.
 * Motion passes. 
 * Adjourned at 6:50p.m.
 
@@ -50,9 +52,9 @@
 * Secretary Toy
 * Treasurer DeWeese
 * Outreach Chair Bolinger
+    * Fridge Duty
 * Event Chair Murrel
 * Industry Liaison Loenen
-    * Fridge Duty
 * Open House Co-Chair Carter
 * Open House Co-Chair Loenen
 * Senior Chair Eisenbarger & Todd
