Recorded meeting minutes
Recorded meeting minutes

Fixed some additional errors

--- a/2018-2019/09-September/09-25-2018 Agenda.md
+++ b/2018-2019/09-September/09-25-2018 Agenda.md
@@ -42,9 +42,9 @@
 
 
 #### Adjournment
-* President Canfield moved to adjourn until next Teusday 5:15pm at 6:00pm in DUE 1116.
+* President Canfield moved to adjourn until next 9-25-2018 6:00pm in DUE 1116.
 * Motion passes. 
-* Adjourned at 6:50p.m.
+* Adjourned at 6:00p.m.
 
 #### Action Items
 * President Canfield
