--- a/2018-2019/10-October/10-23-2018 Agenda.md
+++ b/2018-2019/10-October/10-23-2018 Agenda.md
@@ -18,27 +18,24 @@
 * 
 
 ### UPCOMING EVENTS
-* TBD, DUE 1116 - ACM Industry Series: Cerner ?????
-* October 22 @ 1:00-2:30, Engineering Atrium - Engineering Scholars Day Browsing Fair
-* Halloween - October 
+* October 30 @ 7, CBA MIS Studios (2nd Floor) - ACM & MIS Halloween Social
+* November 6 @ 5:30-6:30, DUE 1116 - Hyland Technologies Industry Series
 * Hour of Code - December
 * Holiday Party  - Late November/December 
 * End of Year/Finals Week Outreach: Coffee & Varsity Donuts
 
 
+
 #### Open Period
-* Introductions
-    * question: "what song to choose for hack k-state."
-* Fridge Duty
-* Engineering Scholars Day Browsing Fair volunteer search.
-* MIS & ACM Halloween Party
 * Hack K-State
-* Polos
+* MIS & ACM halloween party
+* topic of naming a node on beocat.....
+* Hack K-State slideshow
 
 
 
 #### Adjournment
-* President Canfield moved to adjourn until next 10-23-2018 6:00pm in DUE 1116.
+* President Canfield moved to adjourn until next 10-30-2018 6:00pm in DUE 1116.
 * Motion passes. 
 * Adjourned at 7:00p.m.
 
@@ -48,13 +45,17 @@
 * Vice President.........Mary P. Siebert
 * Secretary..............Michael Toy
 * Treasurer..............Amanda Young
+    * Sign up for help session
 * Outreach Chair.........Easton Bolinger
+    * Update OrgSync Events
+    * Sign up for help sessions
 * Event Chair............Cody Murrel
+    * Sign up for help session
 * Industry Liaison.......Andrew Loenen
 * Open House Co-Chair....William Carter
+    * Fridge Duty
 * Open House Co-Chair....Andrew Loenen
 * Senior Chair...........Kyle Eisenbarger & Alex Todd
 * Junior Officer
     * Xan Denniston
-        * Fridge Duty
     * 
