--- a/2018-2019/11-November/11-6-2018 Agenda.md
+++ b/2018-2019/11-November/11-6-2018 Agenda.md
@@ -18,7 +18,6 @@
 * 
 
 ### UPCOMING EVENTS
-* October 30 @ 7, CBA MIS Studios (2nd Floor) - ACM & MIS Halloween Social
 * November 6 @ 5:30-6:30, DUE 1116 - Hyland Technologies Industry Series
 * Hour of Code - December
 * Holiday Party  - Late November/December 
@@ -27,15 +26,16 @@
 
 
 #### Open Period
-* Hack K-State
-* MIS & ACM halloween party
-* topic of naming a node on beocat.....
-* Hack K-State slideshow
+* question: what is your fav thanksgiving food?
+* Halloween party with MIS
+* Sponsorship
+    * Idustry Series
+* Bringing up Elections
 
 
 
 #### Adjournment
-* President Canfield moved to adjourn until next 11-6-2018 6:00pm in DUE 1116.
+* President Canfield moved to adjourn until next 11-13-2018 6:00pm in DUE 1116.
 * Motion passes. 
 * Adjourned at 7:00p.m.
 
@@ -45,15 +45,11 @@
 * Vice President.........Mary P. Siebert
 * Secretary..............Michael Toy
 * Treasurer..............Amanda Young
-    * Sign up for help session
 * Outreach Chair.........Easton Bolinger
-    * Update OrgSync Events
-    * Sign up for help sessions
 * Event Chair............Cody Murrel
-    * Sign up for help session
+    * Fridge Duty
 * Industry Liaison.......Andrew Loenen
 * Open House Co-Chair....William Carter
-    * Fridge Duty
 * Open House Co-Chair....Andrew Loenen
 * Senior Chair...........Kyle Eisenbarger & Alex Todd
 * Junior Officer
